# CIM-Graph

./: -H  .gitconfig  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  IEEE13.ttl  LICENSE  MKDOCS_SETUP.md  README.md  Untitled.ipynb  debug.ipynb  demo_feeder.xml  docker-compose.yml  example.env  file_read_test.ipynb  foo.ipynb  graphd_db_tester.ipynb  ieee118_bus_branch_example.ipynb  ieee13_example.ipynb  index.html  ipython_cell_input.py  maple10bus.xml  maple10busnodebreaker.xml  mermaid.md  mkdocs.yml  model_creator_demo.ipynb  model_example.py  node_breaker_example.ipynb  node_breaker_topo_msg.json  pyproject.toml  rdlfib_test.ipynb  requirements-mkdocs.txt  runner-Copy1.ipynb  runner.ipynb  runner.py  sitemap.xml  sparql_msg.txt  test.xml  test118.xml  (+2 more)
.debug/: esca60_cim12.xml  esca60_debug.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: deploy-dev-release.yml  dev-pre-release.yml  dev-release.yml  dispatch-pypi.yml  docs.yml  publish-to-pypi.yml  release.yml  update-profile.yml
01_overview/1_1_overview/: index.html
01_overview/1_2_installation/: index.html
01_overview/1_3_structure/: index.html
01_overview/1_4_contributing/: index.html
02_cim_profiles/2_1_profiles_overview/: index.html
02_cim_profiles/2_2_building_profiles/: 2_2_building_profiles.ipynb  index.html
02_cim_profiles/2_3_using_objects/: index.html
02_cim_profiles/2_4_using_incrementals/: index.html
02_cim_profiles/2_5_using_units/: 2_5_using_units.ipynb  index.html
03_databases/3_10_rdflib_parser/: 3_10_rdflib_parser.ipynb  index.html
03_databases/3_1_databases_overview/: index.html
03_databases/3_2_env_variables/: 3_2_env_variables.ipynb  index.html
03_databases/3_3_blazegraph/: index.html
03_databases/3_4_neo4j/: 3_4_neo4j.ipynb  index.html
03_databases/3_5_graphdb/: index.html
03_databases/3_6_mysql/: index.html
03_databases/3_7_gridappsd/: index.html
03_databases/3_8_xml_file_parser/: 3_8_xml_file_parser.ipynb  index.html
03_databases/3_9_jsonld_file_parser/: index.html
03_databases/images/: 3_3_connect.txt  3_3_get_all_edges.txt
04_graph_models/4_1_graph_models/: index.html
04_graph_models/4_2_feeder_model/: 4_2_feeder_model.ipynb  index.html
04_graph_models/4_3_node_breaker/: 4_3_node_breaker.ipynb  index.html
04_graph_models/4_4_bus_branch/: 4_4_bus_branch.ipynb  index.html
04_graph_models/4_5_distributed_area/: index.html
04_graph_models/images/: 4_1_get_all_edges.txt
05_utils/5_1_file_writers/: index.html
05_utils/5_2_get_all_data/: 5_2_get_all_data.ipynb  index.html
05_utils/5_3_mermaid/: index.html
CIMTool_plugin/: builder.md  cimantic-graphs-2.3.xsl  cimantic-graphs-init.xsl  cimantic-graphs.xsl
cim/data_profile/: __init__.py
cim/loaders/: __init__.py
cim/models/: __init__.py  distributed_model.py  model_parsers.py  secondary_area.py  switch_area.py
cimgraph/: __init__.py
cimgraph/core/: __init__.py  env_vars.py
cimgraph/data_profile/: __init__.py  attribute_utils.py  cimantic-graphs-init.xsl  cimantic-graphs.xsl  cimgraph.xsl  identity.py  known_problem_classes.py  merge.py  xsd_config.xml
cimgraph/databases/: __init__.py  (+1 more)
conf/: index.html
diagrams/: package.puml
docs/: .readthedocs.yaml  conf.py  index.md  index.rst  requirements.txt
examples/: bus_branch_example.ipynb  ditto_examples.ipynb  feeder_example.ipynb  ieee118_bus_branch_example.ipynb  ieee13_example.ipynb  locations.ipynb  mermaid.md  node_breaker_example.ipynb
gridappsd_cim/: __init__.py  gridappsd_cim_profile.py
loaders/: __init__.py  queryer.py  terminal_loader.py
search/: search_index.json
tests/: blazegraph_test.ipynb  blazegraph_test_seto.py  cim18_line_template.md  gridappsd_test.ipynb  identity.ipynb  mermaid_debug.ipynb  neo4j_test.ipynb  node_breaker_topo_msg.json  out13.xml  rdlfib_test.ipynb  secondary_test.ipynb  test_CIM_PROFILE.py  test_blazegraph_seto.py  test_get_all_edges.py  test_graphdb.py  test_gridappsd_connection.py  test_gridappsd_datasource.py  test_jsonldfile.py  test_merge_profiles.py  test_mermaid.py  test_neo4j.py  test_rdflib.py  test_uuid.py  test_xmlfile.py  timing.py  training_data.json  uuid_test.ipynb  xml_test.ipynb
tutorial/: 01_overview.ipynb  02_ connections.ipynb
xsd/: CIMHub_Profile_2023.xsd  cimhub11.xsd  cimhub_ufls.xsd  config.xml  config.yml  gridappsd-cim-profile-rc4-2021.xsd  gridappsd-cim-profile.xsd
(+458 files in other folders)
