[tool.poetry]
name = "cim-graph"
version = "1.0.0a0"
description = "CIM Graph"
authors = ["A. Anderson <19935503+AAndersn@users.noreply.github.com>",
           "C. Allwardt <3979063+craig8@users.noreply.github.com>"]
packages = [
    { include = "cimgraph" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
xsdata = "^22.5"
defusedxml = "^0.7.1"
SPARQLWrapper = "^2.0.0"
neo4j = "^5.10.0"
rdflib = "^7.0.0"
oxrdflib = "^0.3.6"
rdflib-neo4j = "^0.0.1b6"
mysql-connector-python = "^8.0.0"
#gridappsd-python = "^2024"
nest-asyncio = "^1.5.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17.0"
xsdata = {extras = ["cli"], version = "^22.2"}
xsdata-plantuml = "^21.4"
graphviz = "^0.19.1"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**",
    "docker/**",
    "cimgraph/data_profile/**"
]

#[tool.yapf]
#based_on_style = "pep8"
#spaces_before_comment = 4
#column_limit = 99
#split_before_logical_operator = true

#[tool.isort]
#line_length = 99
