[project]
name = "cim-graph"
version = "0.4.3a9"
description = "CIM Graph"
authors = [
    {name = "A. Anderson", email = "19935503+AAndersn@users.noreply.github.com"},
    {name = "C. Allwardt", email = "3979063+craig8@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = {text = "BSD-3-Clause"}
keywords = ["cim", "power-systems", "graph", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "defusedxml>=0.7.1",
    "SPARQLWrapper>=2.0.0",
    "neo4j>=5.10.0",
    "rdflib>=7.0.0",
    "oxrdflib>=0.3.6",
    "mysql-connector-python>=9.2.0",
    "gridappsd-python>=2025.3.2",
    "nest-asyncio>=1.5.8",
    "mermaid-python>=0.1",
    "pint>=0.24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pre-commit>=2.17.0",
    "graphviz>=0.19.1",
    "ipykernel>=6.27.1",
]

[project.urls]
Homepage = "https://github.com/PNNL-CIM-Tools/CIM-Graph"
Documentation = "https://pnnl-cim-tools.github.io/CIM-Graph/"
Repository = "https://github.com/PNNL-CIM-Tools/CIM-Graph"
Issues = "https://github.com/PNNL-CIM-Tools/CIM-Graph/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cimgraph"]

[tool.hatch.build.targets.sdist]
include = [
    "/cimgraph",
    "README.md",
    "LICENSE",
]

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**",
    "docker/**",
    "cimgraph/data_profile/**",
    "!*.py"
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

[tool.isort]
line_length = 99
